# rust-webapi-template

./: .gitignore  Cargo.toml  LICENSE  README.md  example.env
migrations/2023-08-03-210437_create_users/: up.sql
src/: app_state.rs  constants.rs  main.rs  schema.rs
src/controllers/: mod.rs  user_controller.rs
src/dtos/: user.rs
src/middlewares/: cors.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/services/: user_service.rs
src/utils/: db.rs  di.rs  error.rs  hasher.rs  mod.rs
